machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

// ---------------------------------
// API Structures
// ---------------------------------

// NOLINTNEXTLINE(cppcoreguidelines-avoid-c-arrays,modernize-avoid-c-arrays,modernize-use-using)
typedef uint8_t cm_hash[CM_MACHINE_HASH_BYTE_SIZE];
/// \brief Array of hashes
typedef struct { // NOLINT(modernize-use-using)
    cm_hash *entry;
    size_t count;
} cm_hash_array;
/// \brief Processor state configuration
typedef struct {                        // NOLINT(modernize-use-using)
    uint64_t x[CM_MACHINE_X_REG_COUNT]; ///< Value of general-purpose registers
    uint64_t f[CM_MACHINE_F_REG_COUNT]; ///< Value of floating-point registers
    uint64_t pc;                        ///< Value of pc
    uint64_t fcsr;                      ///< Value of fcsr CSR
    uint64_t mvendorid;                 ///< Value of mvendorid CSR
    uint64_t marchid;                   ///< Value of marchid CSR
    uint64_t mimpid;                    ///< Value of mimpid CSR
    uint64_t mcycle;                    ///< Value of mcycle CSR
    uint64_t icycleinstret;             ///< Value of icycleinstret CSR
    uint64_t mstatus;                   ///< Value of mstatus CSR
    uint64_t mtvec;                     ///< Value of mtvec CSR
    uint64_t mscratch;                  ///< Value of mscratch CSR
    uint64_t mepc;                      ///< Value of mepc CSR
    uint64_t mcause;                    ///< Value of mcause CSR
    uint64_t mtval;                     ///< Value of mtval CSR
    uint64_t misa;                      ///< Value of misa CSR
    uint64_t mie;                       ///< Value of mie CSR
    uint64_t mip;                       ///< Value of mip CSR
    uint64_t medeleg;                   ///< Value of medeleg CSR
    uint64_t mideleg;                   ///< Value of mideleg CSR
    uint64_t mcounteren;                ///< Value of mcounteren CSR
    uint64_t menvcfg;                   ///< Value of menvcfg CSR
    uint64_t stvec;                     ///< Value of stvec CSR
    uint64_t sscratch;                  ///< Value of sscratch CSR
    uint64_t sepc;                      ///< Value of sepc CSR
    uint64_t scause;                    ///< Value of scause CSR
    uint64_t stval;                     ///< Value of stval CSR
    uint64_t satp;                      ///< Value of satp CSR
    uint64_t scounteren;                ///< Value of scounteren CSR
    uint64_t senvcfg;                   ///< Value of senvcfg CSR
    uint64_t ilrsc;                     ///< Value of ilrsc CSR
    uint64_t iflags;                    ///< Value of iflags CSR
} cm_processor_config;
/// \brief RAM state configuration
typedef struct {                // NOLINT(modernize-use-using)
    uint64_t length;            ///< RAM length
    const char *image_filename; ///< RAM image file name
} cm_ram_config;
/// \brief DTB state configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *bootargs;       ///< Bootargs to pass to kernel
    const char *init;           ///< Initialization commands to be executed as root on boot
    const char *entrypoint;     ///< Commands to execute the main application
    const char *image_filename; ///< ROM image file
} cm_dtb_config;
/// \brief Memory range configuration
typedef struct {                // NOLINT(modernize-use-using)
    uint64_t start;             ///< Memory range start position
    uint64_t length;            ///< Memory range length
    bool shared;                ///< Target changes to range affect image file?
    const char *image_filename; ///< Memory range image file name
} cm_memory_range_config;
/// \brief Memory range configuration array
typedef struct { // NOLINT(modernize-use-using)
    cm_memory_range_config *entry;
    size_t count;
} cm_memory_range_config_array;
/// \brief TLB device state configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *image_filename; ///< TLB image file name
} cm_tlb_config;
/// \brief CLINT device state configuration
typedef struct {       // NOLINT(modernize-use-using)
    uint64_t mtimecmp; ///< Value of mtimecmp CSR
} cm_clint_config;
/// \brief HTIF device state configuration
typedef struct {          // NOLINT(modernize-use-using)
    uint64_t fromhost;    ///< Value of fromhost CSR
    uint64_t tohost;      ///< Value of tohost CSR
    bool console_getchar; ///< Make console getchar available?
    bool yield_manual;    ///< Make yield manual available?
    bool yield_automatic; ///< Make yield automatic available?
} cm_htif_config;
/// \brief Cmio state configuration
typedef struct {                           // NOLINT(modernize-use-using)
    bool has_value;                        ///< Represents whether the rest of the struct have been filled
    cm_memory_range_config rx_buffer;      ///< RX buffer memory range
    cm_memory_range_config tx_buffer;      ///< TX buffer memory range
} cm_cmio_config;
/// \brief microarchitecture RAM configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *image_filename; ///< RAM image file name
} cm_uarch_ram_config;
/// \brief Microarchitecture processor configuration
typedef struct { // NOLINT(modernize-use-using)
    uint64_t x[CM_MACHINE_UARCH_X_REG_COUNT];
    uint64_t pc;
    uint64_t cycle;
    bool halt_flag;
} cm_uarch_processor_config;
/// \brief Microarchitecture state configuration
typedef struct { // NOLINT(modernize-use-using)
    cm_uarch_processor_config processor;
    cm_uarch_ram_config ram;
} cm_uarch_config;
/// \brief Machine state configuration
typedef struct { // NOLINT(modernize-use-using)
    cm_processor_config processor;
    cm_ram_config ram;
    cm_dtb_config dtb;
    cm_memory_range_config_array flash_drive;
    cm_tlb_config tlb;
    cm_clint_config clint;
    cm_htif_config htif;
    cm_cmio_config cmio;
    cm_uarch_config uarch;
} cm_machine_config;
/// \brief Merkle tree proof structure
/// \details
/// This structure holds a proof that the node spanning a log2_target_size
/// at a given address in the tree has a certain hash.
typedef struct { // NOLINT(modernize-use-using)
    uint64_t target_address;
    size_t log2_target_size;
    cm_hash target_hash;
    size_t log2_root_size;
    cm_hash root_hash;
    cm_hash_array sibling_hashes;
} cm_merkle_tree_proof;
/// \brief Type of state access
typedef enum {       // NOLINT(modernize-use-using)
    CM_ACCESS_READ,  ///< Read operation
    CM_ACCESS_WRITE, ///< Write operation
} CM_ACCESS_TYPE;
/// \brief Type of access log
typedef struct {      // NOLINT(modernize-use-using)
    bool proofs;      ///< Includes proofs
    bool annotations; ///< Includes annotations
    bool large_data;  ///< Includes data bigger than 8 bytes
} cm_access_log_type;
/// \brief Bracket type
typedef enum {        // NOLINT(modernize-use-using)
    CM_BRACKET_BEGIN, ///< Start of scope
    CM_BRACKET_END    ///< End of scope
} CM_BRACKET_TYPE;
/// \brief Bracket note
typedef struct {          // NOLINT(modernize-use-using)
    CM_BRACKET_TYPE type; ///< Bracket type
    uint64_t where;       ///< Where it points to in the log
    char *text;           ///< Note text
} cm_bracket_note;