machine-bindings/cartesi-machine-sys/src/bindings.rs

#[doc = " \\brief Microarchitecture processor configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_uarch_processor_config {
    pub x: [u64; 32usize],
    pub pc: u64,
    pub cycle: u64,
    pub halt_flag: bool,
}
#[test]
fn bindgen_test_layout_cm_uarch_processor_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_uarch_processor_config> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_uarch_processor_config>(),
        280usize,
        concat!("Size of: ", stringify!(cm_uarch_processor_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_uarch_processor_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_uarch_processor_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_processor_config),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pc) as usize - ptr as usize },
        256usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_processor_config),
            "::",
            stringify!(pc)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cycle) as usize - ptr as usize },
        264usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_processor_config),
            "::",
            stringify!(cycle)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).halt_flag) as usize - ptr as usize },
        272usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_processor_config),
            "::",
            stringify!(halt_flag)
        )
    );
}
#[doc = " \\brief Microarchitecture state configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_uarch_config {
    pub processor: cm_uarch_processor_config,
    pub ram: cm_uarch_ram_config,
}
#[test]
fn bindgen_test_layout_cm_uarch_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_uarch_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_uarch_config>(),
        288usize,
        concat!("Size of: ", stringify!(cm_uarch_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_uarch_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_uarch_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).processor) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_config),
            "::",
            stringify!(processor)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ram) as usize - ptr as usize },
        280usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_config),
            "::",
            stringify!(ram)
        )
    );
}
#[doc = " \\brief Machine state configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_machine_config {
    pub processor: cm_processor_config,
    pub ram: cm_ram_config,
    pub dtb: cm_dtb_config,
    pub flash_drive: cm_memory_range_config_array,
    pub tlb: cm_tlb_config,
    pub clint: cm_clint_config,
    pub htif: cm_htif_config,
    pub rollup: cm_rollup_config,
    pub uarch: cm_uarch_config,
}
#[test]
fn bindgen_test_layout_cm_machine_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_machine_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_machine_config>(),
        1216usize,
        concat!("Size of: ", stringify!(cm_machine_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_machine_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_machine_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).processor) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(processor)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ram) as usize - ptr as usize },
        752usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(ram)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dtb) as usize - ptr as usize },
        768usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(dtb)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flash_drive) as usize - ptr as usize },
        800usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(flash_drive)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tlb) as usize - ptr as usize },
        816usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(tlb)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).clint) as usize - ptr as usize },
        824usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(clint)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).htif) as usize - ptr as usize },
        832usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(htif)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rollup) as usize - ptr as usize },
        856usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(rollup)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).uarch) as usize - ptr as usize },
        928usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_config),
            "::",
            stringify!(uarch)
        )
    );
}
#[doc = " \\brief Merkle tree proof structure\n \\details\n This structure holds a proof that the node spanning a log2_target_size\n at a given address in the tree has a certain hash."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_merkle_tree_proof {
    pub target_address: u64,
    pub log2_target_size: usize,
    pub target_hash: cm_hash,
    pub log2_root_size: usize,
    pub root_hash: cm_hash,
    pub sibling_hashes: cm_hash_array,
}
#[test]
fn bindgen_test_layout_cm_merkle_tree_proof() {
    const UNINIT: ::std::mem::MaybeUninit<cm_merkle_tree_proof> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_merkle_tree_proof>(),
        104usize,
        concat!("Size of: ", stringify!(cm_merkle_tree_proof))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_merkle_tree_proof>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_merkle_tree_proof))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).target_address) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_merkle_tree_proof),
            "::",
            stringify!(target_address)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).log2_target_size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_merkle_tree_proof),
            "::",
            stringify!(log2_target_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).target_hash) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_merkle_tree_proof),
            "::",
            stringify!(target_hash)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).log2_root_size) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_merkle_tree_proof),
            "::",
            stringify!(log2_root_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).root_hash) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_merkle_tree_proof),
            "::",
            stringify!(root_hash)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sibling_hashes) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_merkle_tree_proof),
            "::",
            stringify!(sibling_hashes)
        )
    );
}
#[doc = "< Read operation"]
pub const CM_ACCESS_TYPE_CM_ACCESS_READ: CM_ACCESS_TYPE = 0;
#[doc = "< Write operation"]
pub const CM_ACCESS_TYPE_CM_ACCESS_WRITE: CM_ACCESS_TYPE = 1;
#[doc = " \\brief Type of state access"]
pub type CM_ACCESS_TYPE = ::std::os::raw::c_uint;
#[doc = " \\brief Type of access log"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_access_log_type {
    #[doc = "< Includes proofs"]
    pub proofs: bool,
    #[doc = "< Includes annotations"]
    pub annotations: bool,
    #[doc = "< Includes data bigger than 8 bytes"]
    pub large_data: bool,
}
#[test]
fn bindgen_test_layout_cm_access_log_type() {
    const UNINIT: ::std::mem::MaybeUninit<cm_access_log_type> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_access_log_type>(),
        3usize,
        concat!("Size of: ", stringify!(cm_access_log_type))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_access_log_type>(),
        1usize,
        concat!("Alignment of ", stringify!(cm_access_log_type))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).proofs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log_type),
            "::",
            stringify!(proofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).annotations) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log_type),
            "::",
            stringify!(annotations)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).large_data) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log_type),
            "::",
            stringify!(large_data)
        )
    );
}
#[doc = "< Start of scope"]
pub const CM_BRACKET_TYPE_CM_BRACKET_BEGIN: CM_BRACKET_TYPE = 0;
#[doc = "< End of scope"]
pub const CM_BRACKET_TYPE_CM_BRACKET_END: CM_BRACKET_TYPE = 1;
#[doc = " \\brief Bracket type"]
pub type CM_BRACKET_TYPE = ::std::os::raw::c_uint;
#[doc = " \\brief Bracket note"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_bracket_note {
    #[doc = "< Bracket type"]
    pub type_: CM_BRACKET_TYPE,
    #[doc = "< Where it points to in the log"]
    pub where_: u64,
    #[doc = "< Note text"]
    pub text: *mut ::std::os::raw::c_char,
}
